; ModuleID = '/home/carl/AnghaBench/linux/sound/soc/au1x/extr_psc-ac97.c_au1xpsc_ac97_drvremove.c'
source_filename = "/home/carl/AnghaBench/linux/sound/soc/au1x/extr_psc-ac97.c_au1xpsc_ac97_drvremove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.platform_device = type { i32 }
%struct.au1xpsc_audio_data = type { i32 }

@PSC_CTRL_DISABLE = common dso_local global i32 0, align 4
@au1xpsc_ac97_workdata = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.platform_device*)* @au1xpsc_ac97_drvremove to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @au1xpsc_ac97_drvremove(%struct.platform_device* %0) #0 {
  %2 = alloca %struct.platform_device*, align 8
  %3 = alloca %struct.au1xpsc_audio_data*, align 8
  store %struct.platform_device* %0, %struct.platform_device** %2, align 8
  %4 = load %struct.platform_device*, %struct.platform_device** %2, align 8
  %5 = call %struct.au1xpsc_audio_data* @platform_get_drvdata(%struct.platform_device* %4)
  store %struct.au1xpsc_audio_data* %5, %struct.au1xpsc_audio_data** %3, align 8
  %6 = load %struct.platform_device*, %struct.platform_device** %2, align 8
  %7 = getelementptr inbounds %struct.platform_device, %struct.platform_device* %6, i32 0, i32 0
  %8 = call i32 @snd_soc_unregister_component(i32* %7)
  %9 = load %struct.au1xpsc_audio_data*, %struct.au1xpsc_audio_data** %3, align 8
  %10 = call i32 @AC97_CFG(%struct.au1xpsc_audio_data* %9)
  %11 = call i32 @__raw_writel(i32 0, i32 %10)
  %12 = call i32 (...) @wmb()
  %13 = load i32, i32* @PSC_CTRL_DISABLE, align 4
  %14 = load %struct.au1xpsc_audio_data*, %struct.au1xpsc_audio_data** %3, align 8
  %15 = call i32 @PSC_CTRL(%struct.au1xpsc_audio_data* %14)
  %16 = call i32 @__raw_writel(i32 %13, i32 %15)
  %17 = call i32 (...) @wmb()
  store i32* null, i32** @au1xpsc_ac97_workdata, align 8
  ret i32 0
}

declare dso_local %struct.au1xpsc_audio_data* @platform_get_drvdata(%struct.platform_device*) #1

declare dso_local i32 @snd_soc_unregister_component(i32*) #1

declare dso_local i32 @__raw_writel(i32, i32) #1

declare dso_local i32 @AC97_CFG(%struct.au1xpsc_audio_data*) #1

declare dso_local i32 @wmb(...) #1

declare dso_local i32 @PSC_CTRL(%struct.au1xpsc_audio_data*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
